# gcop_ros_packages

./: .gitmodules  README.txt
gcop_comm/: CMakeLists.txt  package.xml
gcop_comm/msg/: Ctrl.msg  CtrlTraj.msg  CurrPose.msg  GcarCtrl.msg  Iteration_req.msg  State.msg  Stdev.msg
gcop_comm/srv/: Trajectory_req.srv
gcop_ctrl/: .gitignore  CMakeLists.txt  Readme.md  chain_mbsnode.rviz  mainpage.dox  package.xml
gcop_ctrl/cfg/: DslDdpPlanner.cfg  DstarDdpPlanner.cfg  GcarSim.cfg  HrotorOVS.cfg  QRotorIDModelInterface.cfg  gcar_ddp.cfg  hrotor_ovs.cfg  mbsnode.cfg  mbsparamedit.cfg  mbssim.cfg  paramedit.cfg
gcop_ctrl/include/: eig_splinterp.h  eigen_ros_conv.h  tkspline.h
gcop_ctrl/include/gcop_ctrl/: hrotor_ovs.h  imagecost.h  qrotoridmodelcontrol.h  utils.h  vs_evaluate.h
gcop_ctrl/include/gcop_ctrl/dsl_ddp_planner/: dsl_ddp_rviz.h
gcop_ctrl/include/gcop_ctrl/obs_detection_lidar/: obs_detection_lidar.h
gcop_ctrl/launch/: cytonsim.launch  dsl_ddp.rviz  dsl_ddp_hardware_interface.launch  dsl_ddp_offboard.launch  dsl_ddp_onboard.launch  dsl_ddp_onboard_hackerman.launch  dsl_ddp_onboard_latrobe.launch  dsl_ddp_planner.launch  dsl_ddp_sensors.launch  dstar_ddp_planner.launch  gcar_planner.launch  gcar_sim.launch  hrotor_ovs.launch  hrotor_ovs_custom.launch  hrotor_ovs_duo.launch  hrotor_ovs_guidance.launch  hrotor_ovs_sim.launch  hrotor_record.launch  mbs.launch  mbsnode.launch  mbssim.launch  ovs_record.launch  plot_gcop_trajectories.launch  qrotoridmodeltest.launch  rccar.launch  rccar_ddp.launch  rccar_ddp_lcl_planner.launch  vs_evaluate.launch
gcop_ctrl/map/: map.yaml  map_hackerman.pgm  map_hackerman.yaml  map_hackerman2.yaml  map_latrobe_400.ppm  map_latrobe_400.yaml
gcop_ctrl/params/: airbot.yaml  airbot2.yaml  airbot3.yaml  airbot4.urdf  airbot4.yaml  airbot4_2.yaml  airbot5.urdf  airbot5.xacro  airbot5.yaml  airbot_cyton.yaml  chain1.yaml  chain1_1.yaml  chain1_1f.yaml  chain1_3f.yaml  chain1_4.yaml  chain1_f.yaml  chain2.yaml  chain2_f.yaml  chain3.yaml  cyton.yaml  dsl_ddp_planner.yaml  dsl_ddp_planner_hackerman.yaml  dsl_ddp_planner_indoor.yaml  dsl_ddp_planner_latrobe.yaml  dstar_ddp_planner.yaml  gcar_sim.yaml  insekf_3dm.yaml  qrotoridmodel.cfg  qrotoridmodelv2.cfg  qrotoridmodelv3.cfg  qrotoridmodelv4.cfg  qrotoridmodelv5.cfg  qrotoridmodelv6.cfg  qrotoridmodelv7.cfg  qrotoridmodelv7_2.cfg  qrotoridmodelv8.cfg
gcop_ctrl/src/: dsl_ddp_planner.cpp  dstar_ddp_planner.cpp  gcar_ddp_planner.cpp  gcar_sim.cpp  hrotor_ovs.cc  mbsnode.cc  mbssim.cc  mbstest.cc  plot_gcop_trajectories.cpp  qrotoridmodelcontrol.cpp  qrotoridmodeltest.cc  rccar_ddp_lcl_planner.cpp  rccarsub.cc  rccartest.cc  test_node.cpp  utils.cc  vs_evaluate.cc
gcop_ctrl/src/dsl_ddp_planner/: dsl_ddp_planner.cpp  dsl_ddp_rviz.cpp
gcop_ctrl/src/obs_detection_lidar/: obs_detection_lidar.cpp
gcop_est/: .gitignore  CMakeLists.txt  README  nodelet_plugins.xml  package.xml
gcop_est/launch/: estimator1.launch
gcop_ros_bullet/: .gitignore  CMakeLists.txt  Readme.md  frequency_notes  package.xml  pic
gcop_ros_bullet/cfg/: paramedit.cfg
gcop_ros_bullet/cmake/: FindGCOP.cmake  GcopBullet.cmake
gcop_ros_bullet/launch/: cecartest.launch  ceterraincartest.launch  cetrajectory_tracking.launch  gncartest.launch  gnplanarcarcontoltest.launch  hybrid_ceandgn_planar_carcontroltest.launch  hybrid_ceandgn_planar_carcontroltest2.launch  hybrid_ceandgn_planar_carcontroltest_feedback.launch  hybrid_ceandgn_planar_carcontroltest_feedback_remote.launch  hybrid_ceandgn_planar_carcontroltest_remote.launch  hybrid_ceandgn_terrain_carcontroltest.launch  hybrid_ceandgn_terrain_carcontroltest2.launch  hybrid_ceandgn_terrain_carcontroltest_feedback_remote.launch  hybrid_ceandgn_terrain_carcontroltest_remote.launch  hybrid_ceandsddp_planar_carcontroltest.launch  hybrid_ceandsddp_terrain_carcontroltest.launch  rccar.rviz  rccar1.rviz  rviz_and_reconfigure.launch  sddp_planar_cartest.launch  sddp_terrain_cartest.launch  simplemeshcarcontroltest.launch  spsaplanarcarcontroltest.launch  stlmodificationtest.launch
gcop_ros_bullet/params/: cerccar.yaml  cerccar_short_horizon.yaml  ceterrain_rccar.yaml  ceterrain_rccar_scene2.yaml  ceterrain_rccar_scene3.yaml  ceterrain_rccar_short_horizon.yaml  gnrccar.yaml  gnterrain_rccar.yaml  hybrid_sddpplanar_rccar.yaml  hybrid_sddpterrain_rccar.yaml  sddpterrain_rccar.yaml  sddpterrain_rccar_short_horizon.yaml  simplemesh.yaml  spsarccar.yaml
gcop_ros_bullet/src/: cebulletcartest.cc  cetrajectory_tracking.cc  gnbulletcartest.cc  hybrid_ceandgn_bulletcartest.cc  hybrid_ceandgn_bulletcartest2.cc  hybrid_ceandgn_feedbacktest.cc  hybrid_ceandsddp_bulletcartest.cc  sddpbulletcartest.cc  spsabulletcartest.cc  stlmodificationtest.cc
gcop_ros_bullet/urdf/: mesh.urdf  rccar.urdf  simple_mesh.urdf  simple_obstacles.urdf
gcop_ros_bullet/urdf/meshes/: carterrain_goodquality.dae  carterrain_goodquality.stl  carterrain_goodquality_fillholes.dae  carterrain_goodquality_fillholes.stl  carterrain_lowresmesh.dae  plane.stl  simple_mesh2.dae  simple_mesh2.stl  simple_obstacles.dae  simple_obstacles.stl
gcop_ros_bullet/urdf/meshes/obstacle_course_blender_model/: obstacle_course.dae
gcop_ros_est/: .gitignore  CMakeLists.txt  README.md  insekf.rviz  package.xml
gcop_ros_est/calib/: calib_result.txt  mag_noise_est.m  mag_noise_est.m~  mavros_imu_noise.data  test_ellipsoid_mag.m
gcop_ros_est/cfg/: Calibrator.cfg  Insekf.cfg  SimSens.cfg
gcop_ros_est/include/: eigen_ros_conv.h  miniball.hpp  xmlrcp_eig_conv.h  yaml_eig_conv.h
gcop_ros_est/launch/: 2015-05-21-10-24-31.bag  2015-08-17-12-29-44.bag  calibrator_mavros.launch  calibrator_multisense.launch  estimator1.launch  insekf.launch  insekf.rviz  insekf_3dm.launch  insekf_artags_3dm.launch  insekf_mavros.launch  insekf_multisense.launch  mbsforceest.launch  obstacle_detection_lidar.launch  rviz_insekf.launch  satmap_server.launch  sensors_3dm.launch  sensors_px4.launch  (+2 more)
gcop_ros_utils/: CMakeLists.txt  package.xml
gcop_urdf/: CMakeLists.txt  Readme.md  chain.rviz  chainsim.rviz  gcop_urdf.rviz  package.xml  rccar.rviz  usv.rviz
(+60 files in other folders)
